--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,5 @@
-.App {
-  margin: 0 auto;
-  padding: 2.3em 3em 2em;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  border: 2px dashed #888888;
-  border-radius: 30px;
+// @import 'open-props/style';
 
-  background-color: var(--purple-8);
+.App {
+  padding: 2em;
 }
