--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* @import 'open-props/normalize.min.css';
-@import 'open-props/open-props.min.css'; */
+@import 'open-props/normalize.min.css';
+@import 'open-props/open-props.min.css';
 
 @tailwind base;
 @tailwind components;
